--- a/Score.html
+++ b/Score.html
@@ -52,20 +52,30 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
             <i class="far fa-user"></i></a>
           <div class="dropdown-menu dropdown-menu-right">
-            <a class="dropdown-item" href="#">profile</a>
+            <h4 class="dropdown-item" id="wocka">PlaceHolder</h4>
+            <a class="dropdown-item" href="StudentDash.html">profile</a>
             <a class="dropdown-item" href="Score.html">Score</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Log out</a>
+            <a class="dropdown-item" href="Home.html">Log out</a>
           </div>
         </li>
     </nav>
+
+    <script>
+      //alert("TESTTESTSETSETESTE");
+      var storedValue = sessionStorage.getItem("loggedIn");
+      //document.write(storedValue);
+      document.getElementById("wocka").innerHTML = "User: " + storedValue;
+    </script>
+
+
     <a href="StudentDash.html">back </a>
 
 
     <h2 class="text-center">My Score</h2>
 
     <table>
-      <tr>
+      <tr id="flocka">
         <th rowspan="3">module1</th>
         <th>lesson1</th>
         <td class="score1" id="mod1les1"></td>
@@ -81,6 +91,20 @@
       </tr>
 
     <table>
+
+      <script>
+        
+        var storedScore = sessionStorage.getItem("userscore");
+        var row = document.getElementById("flocka");
+
+        var x = row.insertCell(2);
+        x.innerHTML = storedScore + "/3";
+
+        //document.write("TESTING IF SCRIPT IS RUN");
+        //alert("test");
+
+        
+      </script>
 
 
     <!-- Optional JavaScript -->
