--- a/WhatsStock.html
+++ b/WhatsStock.html
@@ -60,13 +60,25 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
             <i class="far fa-user"></i></a>
           <div class="dropdown-menu dropdown-menu-right">
-            <a class="dropdown-item" href="#">profile</a>
+            <h4 class="dropdown-item" id="wocka">PlaceHolder</h4>
+            <a class="dropdown-item" href="StudentDash.html">profile</a>
             <a class="dropdown-item" href="Score.html">Score</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Log out</a>
+            <a class="dropdown-item" href="Home.html">Log out</a>
           </div>
         </li>
     </nav>
+
+
+    <script>
+      //alert("TESTTESTSETSETESTE");
+      var storedValue = sessionStorage.getItem("loggedIn");
+      //document.write(storedValue);
+      document.getElementById("wocka").innerHTML = "User: " + storedValue;
+    </script>
+
+
+
     <a href="StudentDash.html">back </a>
 
     <h2 class="text-center">What is Stock??</h2>
