--- a/quizOne.html
+++ b/quizOne.html
@@ -66,13 +66,24 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
             <i class="far fa-user"></i></a>
           <div class="dropdown-menu dropdown-menu-right">
-            <a class="dropdown-item" href="#">profile</a>
+            <h4 class="dropdown-item" id="wocka">PlaceHolder</h4>
+            <a class="dropdown-item" href="StudentDash.html">profile</a>
             <a class="dropdown-item" href="Score.html">Score</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Log out</a>
+            <a class="dropdown-item" href="Home.html">Log out</a>
           </div>
         </li>
     </nav>
+
+
+    <script>
+      //alert("TESTTESTSETSETESTE");
+      var storedValue = sessionStorage.getItem("loggedIn");
+      //document.write(storedValue);
+      document.getElementById("wocka").innerHTML = "User: " + storedValue;
+    </script>
+
+
     <!--Back to lesson one-->
     <a class= "backButton" href="WhatsStock.html">back </a>
 
@@ -160,6 +171,17 @@
         document.getElementById("showScore").style.visibility = "visible";
 
         document.getElementById("yourScore").innerHTML = "You got "+ correct + " out of 3.";
+
+        if(typeof(Storage)!=="undefined"){
+              var scorelog = correct;
+              //alert("Current user is :" + userlog);
+              sessionStorage.setItem("userscore",scorelog);
+              //alert("TESTING SCORE" + scorelog);
+            }
+          
+            else{
+              alert("TETSTSTSTST");
+            }
 
       }
     </script>
