just wanting to see if this push will fix the site

--- a/WhatsStock.html
+++ b/WhatsStock.html
@@ -184,7 +184,7 @@
           </p>
       </div>
 
-      <!--<a class="btn btn-secondary quizButton" href="quizOne.html">Quiz</a>-->
+      <a class="btn btn-secondary quizButton" href="quizOne.html">Quiz</a>
       <div class="modal" id="term1">
           <div class="modal-content">
               <div class="modal-body">
