--- a/Home.html
+++ b/Home.html
@@ -8,75 +8,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="https://kit.fontawesome.com/yourcode.js"></script>
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-
     
-
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" type="text/css" href="/Stock101Project/public/css/styles.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
-      .LogoNav
-      {
-        height: 60px;
-        width: 70px;
-      }
-      .signin, .signup
-      {
-        min-width: 110px;
-	      max-height: 36px;
-        border: none;
-        background: transparent;
-      }
-      .modal-login
-      {
-        width:350px;
+        .LogoNav {
+            height: 60px;
+            width: 70px;
+        }
 
-      }
-      .modal-header
-      {
-        border: none;
-        font-size: 2em;
-      }
-      #signInInput
-      {
-        border-top: none;
-        border-left: none;
-        border-right: none;
-        outline: none;
-        padding-top: 20px;
-      }
-      #userIcon
-      {
-        font-size: 90px;
-      }
-      #EmailIcon
-      {
-        font-size: 20px;
-      }
-      #pwdIcon
-      {
-        font-size: 30px;
-      }
-      .modal-footer
-      {
-        border-top: none;
-      }
-      .form-group
-      {
-        margin-top: 15px;
-      }
-      #teachIcon, #stuIcon
-      {
-        font-size: 70px;
-        padding-bottom: 20px;
-      }
-      .pic1
-      {
-        height: 300px;
-        margin-left: 35%;
-        margin-top: 50px;
-      }
+        .signin, .signup {
+            min-width: 110px;
+            max-height: 36px;
+            border: none;
+            background: transparent;
+        }
+
+        .modal-login {
+            width: 350px;
+        }
+
+        .modal-header {
+            border: none;
+            font-size: 2em;
+        }
+
+        #signInInput {
+            border-top: none;
+            border-left: none;
+            border-right: none;
+            outline: none;
+            padding-top: 20px;
+        }
+
+        #userIcon {
+            font-size: 90px;
+        }
+
+        #EmailIcon {
+            font-size: 20px;
+        }
+
+        #pwdIcon {
+            font-size: 30px;
+        }
+
+        .modal-footer {
+            border-top: none;
+        }
+
+        .form-group {
+            margin-top: 15px;
+        }
+
+        #teachIcon, #stuIcon {
+            font-size: 70px;
+            padding-bottom: 20px;
+        }
+
+        .pic1 {
+            height: 300px;
+            margin-left: 35%;
+            margin-top: 50px;
+        }
     </style>
-	  
+
     <title>Home</title>
   </head>
 	
