--- a/Score.html
+++ b/Score.html
@@ -52,7 +52,7 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
             <i class="far fa-user"></i></a>
           <div class="dropdown-menu dropdown-menu-right">
-            <h4 class="dropdown-item" id="wocka">PlaceHolder</h4>
+            <h4 class="dropdown-item" id="dropdownname">PlaceHolder</h4>
             <a class="dropdown-item" href="StudentDash.html">profile</a>
             <a class="dropdown-item" href="Score.html">Score</a>
             <div class="dropdown-divider"></div>
@@ -65,7 +65,7 @@
       //alert("TESTTESTSETSETESTE");
       var storedValue = sessionStorage.getItem("loggedIn");
       //document.write(storedValue);
-      document.getElementById("wocka").innerHTML = "User: " + storedValue;
+      document.getElementById("dropdownname").innerHTML = "User: " + storedValue;
     </script>
 
 
@@ -75,7 +75,7 @@
     <h2 class="text-center">My Score</h2>
 
     <table>
-      <tr id="flocka">
+      <tr id="scores">
         <th rowspan="3">module1</th>
         <th>lesson1</th>
         <td class="score1" id="mod1les1"></td>
@@ -95,7 +95,7 @@
       <script>
         
         var storedScore = sessionStorage.getItem("userscore");
-        var row = document.getElementById("flocka");
+        var row = document.getElementById("scores");
 
         var x = row.insertCell(2);
         x.innerHTML = storedScore + "/3";
