--- a/StudentDash.html
+++ b/StudentDash.html
@@ -95,7 +95,7 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
             <i class="far fa-user"></i></a>
           <div class="dropdown-menu dropdown-menu-right">
-            <h4 class="dropdown-item" id="wocka">PlaceHolder</h4>
+            <h4 class="dropdown-item" id="dropdownname">PlaceHolder</h4>
             <a class="dropdown-item" href="#">profile</a>
             <a class="dropdown-item" href="Score.html">Score</a>
             <div class="dropdown-divider"></div>
@@ -110,7 +110,7 @@
       //alert("TESTTESTSETSETESTE");
       var storedValue = sessionStorage.getItem("loggedIn");
       //document.write(storedValue);
-      document.getElementById("wocka").innerHTML = "User: " + storedValue;
+      document.getElementById("dropdownname").innerHTML = "User: " + storedValue;
     </script>
       
       
