--- a/quizOne.html
+++ b/quizOne.html
@@ -66,7 +66,7 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
             <i class="far fa-user"></i></a>
           <div class="dropdown-menu dropdown-menu-right">
-            <h4 class="dropdown-item" id="wocka">PlaceHolder</h4>
+            <h4 class="dropdown-item" id="dropdownname">PlaceHolder</h4>
             <a class="dropdown-item" href="StudentDash.html">profile</a>
             <a class="dropdown-item" href="Score.html">Score</a>
             <div class="dropdown-divider"></div>
@@ -80,7 +80,7 @@
       //alert("TESTTESTSETSETESTE");
       var storedValue = sessionStorage.getItem("loggedIn");
       //document.write(storedValue);
-      document.getElementById("wocka").innerHTML = "User: " + storedValue;
+      document.getElementById("dropdownname").innerHTML = "User: " + storedValue;
     </script>
 
 
@@ -188,7 +188,7 @@
             }
           
             else{
-              alert("TETSTSTSTST");
+              alert("TEST");
             }
 
       }
